--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -45,6 +45,7 @@
     var source = [[${source}]];
     var authorized = [[${authorized}]];
 	var authorizedGC = [[${authorizedGC}]];
+	var authorizedBox = [[${authorizedBox}]];
     var oauthToken = [[${accessToken}]];
     var deselectedColumns = [[${deselectedColumns}]];
 /*]]>*/
@@ -116,12 +117,12 @@
 								</div>
 
 								<!--  Radio buttons for selecting the download destination source -->
-								<div th:replace = "downloadFragment.html :: downloadSelectFragment"></div>
+								<div th:replace = "~{downloadFragment.html :: downloadSelectFragment}"></div>
 
 								<!--  Globus Help Links -->
-                                <div th:replace = "downloadFragment.html :: globusHelpFragment"></div>
+                                <div th:replace = "~{downloadFragment.html :: globusHelpFragment}"></div>
                                 <!--  Globus block for download -->
-								<div th:replace = "downloadFragment.html :: globusDivFragment"></div>
+								<div th:replace = "~{downloadFragment.html :: globusDivFragment}"></div>
 
 								<div id="SyncDiv" style="display: show" th:if="${downloadType == 'datafile'}">
 									<div class="col-sm-12 column leftMargin">
@@ -131,14 +132,42 @@
 											placeholder="Enter Download File Name" />
 									</div>
 								</div>
+
 								<!-- AWS block -->
-								<div th:replace = "downloadFragment.html :: awsBlock"></div>
+								<div th:replace = "~{downloadFragment.html :: awsBlock}"></div>
+
 								<!-- Google Drive block -->
-								<div th:replace = "downloadFragment.html :: googleDriveBlock"></div>
+								<div id="driveDiv" style="display: none">
+									<div class="col-sm-12 column leftMargin">
+										<a class="btn btn-primary" id="driveAuthlink"
+                                    				th:href="@{../download(type=${downloadType},source=${source},actionType=Drive,downloadFilePath=${downloadFilePath})}">
+                                    				Authorize DME to Access Your Google Drive</a>
+									</div>
+									<div th:replace = "~{downloadFragment.html :: googleDriveCommonBlock}"></div>
+								</div>
+
 								<!-- Google Cloud block -->
-								<div th:replace = "downloadFragment.html :: googleCloudBlock"></div>
+								<div id="googleCloudDiv" style="display: none">
+									<div class="col-sm-12 column leftMargin">
+										<a class="btn btn-primary" id="googleCloudAuthlink"
+							                                     th:href="@{../download(type=${downloadType},source=${source},actionType=googleCloud,downloadFilePath=${downloadFilePath})}">
+							                                     Authorize DME to Access Your Google Cloud</a>
+									</div>
+									<div th:replace = "~{downloadFragment.html :: googleCloudCommonBlock}"></div>
+								</div>
+
 								<!-- Aspera/DbGap block -->
-								<div th:replace = "downloadFragment.html :: asperaBlock"></div>
+								<div th:replace = "~{downloadFragment.html :: asperaBlock}"></div>
+
+								<!-- Box block -->
+								<div id="boxDiv" style="display: none">
+									<div class="col-sm-12 column leftMargin">
+										<a class="btn btn-primary" id="boxAuthlink"
+							                                     th:href="@{../download(type=${downloadType},source=${source},actionType=box,downloadFilePath=${downloadFilePath})}">
+							                                     Authorize DME to Access your Box</a>
+									</div>
+									<div th:replace = "~{downloadFragment.html :: boxCommonBlock}"></div>
+								</div>
 
 								<div th:if="${downloadType == 'collection'}" style="margin-top: 15px; margin-bottom: -1px">
 									<div class="col-sm-12 column" id="radioset2" style="margin-left: -15px; margin-top: -3px">
@@ -324,6 +353,17 @@
 					alert("Aspera path is not set");
 					return false;
 				}
+			} else if (radioValue == 'box') {
+				var boxBucketName = document.getElementById("boxBucketName").value;
+				var boxPath = document.getElementById("boxPath").value;
+				if (boxBucketName == null || boxBucketName.trim().length == 0) {
+					alert("Enter Box bucket name for single file download");
+					return false;
+				}
+				if (boxPath == null || boxPath.trim().length == 0) {
+					alert("Enter Box destination path");
+					return false;
+				}
 			} else {
 				var downloadFileName = document
 						.getElementById("downloadFileName").value;
@@ -418,6 +458,10 @@
 				$("#searchTypeGoogleCloud").prop("checked", true);
                 display('googleCloud');
 	        }
+			if($('#transferType').val() == 'box') {
+				$("#searchTypeBox").prop("checked", true);
+                display('box');
+	        }
 	    });
 
 
@@ -455,7 +499,7 @@
 								e.preventDefault();
 								
 								var radioValue = document.querySelector('input[name="searchType"]:checked').value
-								if (radioValue == 'async' || radioValue == 's3' || radioValue == 'drive' || radioValue == 'googleCloud' || radioValue == 'aspera') {
+								if (radioValue == 'async' || radioValue == 's3' || radioValue == 'drive' || radioValue == 'googleCloud' || radioValue == 'aspera' || radioValue == 'box') {
 									$("#wait")
 											.html(
 													'<img width="50" height="50" src="img/spinner.gif" alt="Wait" />');
@@ -512,6 +556,7 @@
 			var driveDiv = document.getElementById("driveDiv");
 			var googleCloudDiv = document.getElementById("googleCloudDiv");
 			var asperaDiv = document.getElementById("asperaDiv");
+			var boxDiv = document.getElementById("boxDiv");
 			if (value == "async") {
 				asyncDiv.style.display = "block";
 				globusHelpLinksDiv.style.display = "block";
@@ -519,6 +564,8 @@
 					syncDiv.style.display = "none";
 				s3Div.style.display = "none";
 				asperaDiv.style.display = "none";
+				if(boxDiv)
+					boxDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv)
@@ -538,6 +585,7 @@
 				globusHelpLinksDiv.style.display = "none";
 				s3Div.style.display = "none";
 				asperaDiv.style.display = "none";
+				boxDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv)
@@ -552,6 +600,7 @@
 				globusHelpLinksDiv.style.display = "none";
 				s3Div.style.display = "block";
 				asperaDiv.style.display = "none";
+				boxDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv)
@@ -566,6 +615,7 @@
 				globusHelpLinksDiv.style.display = "none";
 				s3Div.style.display = "none";
 				asperaDiv.style.display = "none";
+				boxDiv.style.display = "none";
 				if(googleCloudDiv)
 					googleCloudDiv.style.display = "none";
 				if(driveDiv) {
@@ -588,6 +638,7 @@
 				globusHelpLinksDiv.style.display = "none";
 				s3Div.style.display = "none";
 				asperaDiv.style.display = "none";
+				boxDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv) {
@@ -609,6 +660,7 @@
 				asyncDiv.style.display = "none";
 				globusHelpLinksDiv.style.display = "none";
 				s3Div.style.display = "none";
+				boxDiv.style.display = "none";
 				asperaDiv.style.display = "block";
 				if(driveDiv)
 					driveDiv.style.display = "none";
@@ -617,6 +669,33 @@
 				if(downloadType == "datafile")
 					$("#asperaPath").val(downloadFileName);
 				$("#submit").prop('disabled', false);
+			}  else if (value == 'box'){
+				if(syncDiv)
+					syncDiv.style.display = "none";
+				asyncDiv.style.display = "none";
+				globusHelpLinksDiv.style.display = "none";
+				s3Div.style.display = "none";
+				asperaDiv.style.display = "none";
+				if(boxDiv) {
+					boxDiv.style.display = "block";
+					if(downloadType == "collection")
+						$("#boxPath").val("/");
+					else
+						$("#boxPath").val(downloadFileName);
+				}
+				if(driveDiv)
+					driveDiv.style.display = "none";
+				if(googleCloudDiv)
+					googleCloudDiv.style.display = "none";
+				if(downloadType == "datafile")
+					$("#asperaPath").val(downloadFileName);
+				if(authorizedBox != null) {
+					$("#submit").prop('disabled', false);
+					$("#boxAuthlink").addClass('disabled');
+				} else {
+					$("#submit").prop('disabled', true);
+				}
+
 			}
 		}
 	//]]>	
