--- a/src/hpc-web/src/main/resources/templates/downloadFragment.html
+++ b/src/hpc-web/src/main/resources/templates/downloadFragment.html
@@ -36,6 +36,11 @@
 					name="searchType" id="searchTypeAspera" value="aspera"
 					onChange="display('aspera')" />dbGaP</label>
 			</div>
+			<div class="pull-left">
+				<label class="radio-inline radioMargin"><input type="radio"
+					name="searchType" id="searchTypeBox" value="box"
+					onChange="display('box')" />Box</label>
+			</div>
 		</div>
 		<br/><br/><br/>
 	</div>
@@ -73,97 +78,102 @@
 </th:block>
 
 <th:block th:fragment="awsBlock">		
-		<div id="s3Div" style="display: none; margin: -15px">
-			<div class="col-sm-12 column">
+		<div id="s3Div" style="display: none;">
+			<div class="col-sm-12 column leftMargin">
 				<label for="bucketName">S3 Bucket:</label>
 				<input
 					type="text" class="form-control" name="bucketName" th:value="${bucketName}"
 					id="bucketName" placeholder="Enter S3 Bucket Name" style="margin-top: 1px; margin-bottom: 10px; width:600px;" />
 			</div>
-			<div class="col-sm-12 column">
+			<div class="col-sm-12 column leftMargin">
 				<label for="s3Path">Endpoint Path:</label> <input
 					type="text" class="form-control fieldWidth fieldMargin"
 					th:value="${s3Path}"
 					name="s3Path" id="s3Path"
 					placeholder="Enter S3 Endpoint Path" />
 			</div>
-			<div class="col-sm-12 column">
+			<div class="col-sm-12 column leftMargin">
 				<label for="accessKey">Access Key:</label> <input
 					type="text" class="form-control fieldWidth fieldMargin"
 					th:value="${accessKey}"
 					name="accessKey" id="accessKey"
 					placeholder="Enter Access Key" style="margin-top: 1px; margin-bottom: 10px; width:600px;"  />
 			</div>
-			<div class="col-sm-12 column">
+			<div class="col-sm-12 column leftMargin">
 				<label for="secretKey">Secret Access Key:</label> <input
 					type="password" autocomplete="secret-access-key" class="form-control fieldWidth fieldMargin"
 					th:value="${secretKey}"
 					name="secretKey" id="secretKey"
 					placeholder="Enter Secret Access Key" />
 			</div>
-			<div class="col-sm-12 column">
+			<div class="col-sm-12 column leftMargin">
 				<label for="region">Region:</label> <input
 					type="text" class="form-control fieldWidth"
 					th:value="${region}"
 					name="region" id="region"
-					placeholder="Enter Region (for Example us-east-1)" style="margin-top: 1px; margin-bottom: 19px;"  />
+					placeholder="Enter Region (for Example us-east-1)" />
 			</div>
 		</div>							
 </th:block>
 
-
-<th:block th:fragment="googleDriveBlock">
-	<div id="driveDiv" style="display: none">
-		<div class="col-sm-12 column leftMargin">
-			<a class="btn btn-primary" id="driveAuthlink" 
-                                     th:href="@{../download(type=${downloadType},source=${source},actionType=Drive,downloadFilePath=${downloadFilePath})}">
-                                     Authorize DME to Access Your Google Drive</a>
-		</div>
-		<div th:if="${authorized != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
-		<br/>
-		<div class="col-sm-12 column leftMargin">
-			<label for="drivePath">Endpoint Path:</label>
-			<a th:if="${authorized != null}" id="pickerLink" onclick="loadDownloadPicker()" style="cursor:pointer">
-                                     Select from Google Drive (Optional)</a>
-			<input
-				type="text" class="form-control" style="width:600px;"
-				th:value="${drivePath}"
-				name="drivePath" id="drivePath"
-				placeholder="Enter Google Drive Endpoint Path" size="40" />
-		</div>
+<th:block th:fragment="googleDriveCommonBlock">
+	<div th:if="${authorized != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
+	<br/>
+	<div class="col-sm-12 column leftMargin">
+		<label for="drivePath">Endpoint Path:</label>
+		<a th:if="${authorized != null}" id="pickerLink" onclick="loadDownloadPicker()" style="cursor:pointer">
+                                    Select from Google Drive (Optional)</a>
+		<input
+			type="text" class="form-control" style="width:600px;"
+			th:value="${drivePath}"
+			name="drivePath" id="drivePath"
+			placeholder="Enter Google Drive Endpoint Path" size="40" />
 	</div>
 </th:block>
 
-<th:block th:fragment="googleCloudBlock">
-	<div id="googleCloudDiv" style="display: none">
-		<div class="col-sm-12 column leftMargin">
-			<a class="btn btn-primary" id="googleCloudAuthlink"
-                                     th:href="@{../download(type=${downloadType},source=${source},actionType=googleCloud,downloadFilePath=${downloadFilePath})}">
-                                     Authorize DME to Access Your Google Cloud</a>
-		</div>
-		<div th:if="${authorizedGC != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
-		<br/>
-		<div class="col-sm-12 column leftMargin">
-			<label for="googleCloudBucketName">Google Cloud Bucket</label>
-			<input
-				type="text" class="form-control fieldWidth" name="googleCloudBucketName" th:value="${googleCloudBucketName}"
-				id="googleCloudBucketName" placeholder="Enter Google Cloud Bucket Name" />
-		</div>
-		<div class="col-sm-12 column leftMargin">
-			<label for="googleCloudPath">Endpoint Path:</label>
-			<input
-				type="text" class="form-control fieldWidth"
-				th:value="${googleCloudPath}"
-				name="googleCloudPath" id="googleCloudPath"
-				placeholder="Enter Google Cloud Endpoint Path" />
-		</div>
+<th:block th:fragment="googleCloudCommonBlock">
+	<div th:if="${authorizedGC != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
+	<br/>
+	<div class="col-sm-12 column leftMargin">
+		<label for="googleCloudBucketName">Google Cloud Bucket</label>
+		<input
+			type="text" class="form-control fieldWidth" name="googleCloudBucketName" th:value="${googleCloudBucketName}"
+			id="googleCloudBucketName" placeholder="Enter Google Cloud Bucket Name" />
+	</div>
+	<br/>
+	<div class="col-sm-12 column leftMargin">
+		<label for="googleCloudPath">Endpoint Path:</label>
+		<input
+			type="text" class="form-control fieldWidth"
+			th:value="${googleCloudPath}"
+			name="googleCloudPath" id="googleCloudPath"
+			placeholder="Enter Google Cloud Endpoint Path" />
 	</div>
 </th:block>
 
+<th:block th:fragment="boxCommonBlock">
+	<div th:if="${authorizedBox != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
+	<br/>
+	<div class="col-sm-12 column leftMargin">
+		<label for="boxBucketName">Box Bucket</label>
+		<input
+			type="text" class="form-control fieldWidth" name="boxBucketName" th:value="${boxBucketName}"
+			id="boxBucketName" placeholder="Enter Box Bucket Name" />
+	</div>
+	<br/>
+	<div class="col-sm-12 column leftMargin">
+		<label for="boxPath">Endpoint Path:</label>
+		<input
+			type="text" class="form-control fieldWidth"
+			th:value="${boxPath}"
+			name="boxPath" id="boxPath"
+			placeholder="Enter Box Endpoint Path" />
+	</div>
+</th:block>
 
 <th:block th:fragment="asperaBlock">
-	<div id="asperaDiv" style="display: none; margin: -15px">
-		<div class="col-sm-12 column">
+	<div id="asperaDiv" style="display: none;">
+		<div class="col-sm-12 column leftMargin">
 			<label for="asperaBucketName">Aspera Destination Directory:</label>
 			<div th:if="${asperaBucketName == 'test'}" id="oneOption">
 				<select name="asperaBucketName" id="asperaBucketName" class="form-control fieldWidth fieldMargin">
@@ -177,7 +187,7 @@
 				</select>
 			</div>
 		</div>
-		<div class="col-sm-12 column">
+		<div class="col-sm-12 column leftMargin">
 			<label for="asperaUser">Aspera Account User:</label> <input
 				type="text" class="form-control fieldWidth fieldMargin"
 				th:value="${asperaUser}"
@@ -186,19 +196,19 @@
 		</div>
 		<input type="hidden" name="asperaPath" id="asperaPath"
 				th:value="${asperaPath}" />
-		<div class="col-sm-12 column">
+		<div class="col-sm-12 column leftMargin">
 			<label for="asperaPassword">Aspera Account Password:</label> <input
 				type="password" autocomplete="secret-access-key" class="form-control fieldWidth  fieldMargin"
 				th:value="${asperaPassword}"
 				name="asperaPassword" id="asperaPassword"
 				placeholder="Enter Aspera Password" />
 		</div>
-		<div class="col-sm-12 column">
+		<div class="col-sm-12 column leftMargin">
 			<label for="asperaHost">Aspera Host:</label> <input
 				type="text" class="form-control fieldWidth"
 				th:value="${asperaHost}"
 				name="asperaHost" id="asperaHost"
-				placeholder="Enter Aspera Host" style="margin-top: 1px; margin-bottom: 21px;" />
+				placeholder="Enter Aspera Host" />
 		</div>
 	</div>
 </th:block>
