--- a/src/hpc-web/src/main/resources/templates/downloadFragment.html
+++ b/src/hpc-web/src/main/resources/templates/downloadFragment.html
@@ -49,51 +49,50 @@
 
 <th:block th:fragment="globusHelpFragment">
     <div id="globus-help-links" style="display: none; margin-top: -15px; margin-bottom: 20px">
-              To download to Globus, DME should be provided write access to the targeted Globus endpoint.  Refer to <a href="https://wiki.nci.nih.gov/x/cAyKFg" target="_blank" title="Link to help docu[...]"
+        To download to Globus, DME should be provided write access to the targeted Globus endpoint.  Refer to <a href="https://wiki.nci.nih.gov/x/cAyKFg" target="_blank" title="Link to help document (opens in new tab or window)">Preparing to Use Globus with DME</a> for instructions.
     </div>
 </th:block>
 
 <th:block th:fragment="globusDivFragment">
-	<div id="AsyncDiv" style="display: none">
-	    <div class="col-sm-12 column leftMargin">
-			<label for="endPointName">Globus Endpoint UUID:</label> 
-			<a id="downloadlink" 
-	                                    th:href="@{../download(type=${downloadType},source=${source},actionType=Globus,downloadFilePath=${downloadFilePath})}">					  
-	                                    Obtain from Globus (Optional)</a>
+	<div id="AsyncDiv" style="display: none;">
+	    <div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+			<label for="endPointName" style="min-width: 180px; margin-bottom: 0;">Endpoint UUID:</label>
 			<input type="hidden" name="actionType" id="actionType" />
 			<input
-				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth" name="endPointName" th:value="${endPointName}"
+				type="text" style="margin-left: 10px; margin-right: 5px;" class="form-control fieldWidth fieldMargin" name="endPointName" th:value="${endPointName}"
 				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
+			<a id="downloadlink"
+	             th:href="@{../download(type=${downloadType},source=${source},actionType=Globus,downloadFilePath=${downloadFilePath})}">
+	             Obtain from Globus (Optional)</a>
 		</div>
-		<div class="col-sm-12 column leftMargin">
-			<label for="endPointLocation">Endpoint Path:</label> 
+		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+			<label for="endPointLocation" style="min-width: 180px; margin-bottom: 0;">Endpoint Path:</label>
 			<input
-				type="text" class="form-control fieldWidth"
+				type="text" style="margin-left: 10px;" class="form-control fieldWidth"
 				th:value="${endPointLocation}"
-				name="endPointLocation" id="endPointLocation" style="margin-top: 1px; margin-bottom: 1px;" 
+				name="endPointLocation" id="endPointLocation"
 				placeholder="Enter Globus Endpoint Path" />
 		</div>
 	</div>
 </th:block>
 
 <th:block th:fragment="globusDivMultiFragment">
-	<div id="AsyncDiv" style="display: none">
-	    <div class="col-sm-12 column leftMargin">
-			<label for="endPointName">Globus Endpoint UUID:</label>
+	<div id="AsyncDiv" style="display: none;">
+	    <div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+			<label for="endPointName" style="min-width: 180px; margin-bottom: 0;">Globus Endpoint UUID:</label>
+			<input
+				type="text" style="margin-left: 10px; margin-right: 5px;" class="form-control fieldWidth fieldMargin" name="endPointName" th:value="${endPointName}"
+				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
 			<a id="downloadlink"
 				th:href="@{../downloadfiles(transferType=globus,downloadType=${downloadType})}">
                 Obtain from Globus (Optional)</a>
-			<input type="hidden" name="actionType" id="actionType" />
-			<input
-				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth" name="endPointName" th:value="${endPointName}"
-				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
 		</div>
-		<div class="col-sm-12 column leftMargin">
-			<label for="endPointLocation">Endpoint Path:</label> 
+		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+			<label for="endPointLocation" style="min-width: 180px; margin-bottom: 0;">Endpoint Path:</label>
 			<input
 				type="text" class="form-control fieldWidth"
 				th:value="${endPointLocation}"
-				name="endPointLocation" id="endPointLocation" style="margin-top: 1px; margin-bottom: 1px;" 
+				name="endPointLocation" id="endPointLocation" style="margin-left: 10px;"
 				placeholder="Enter Globus Endpoint Path" />
 		</div>
 	</div>
@@ -102,13 +101,15 @@
 <th:block th:fragment="awsBlock">        
 		<div id="s3Div" style="display: none;">
 			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="bucketName" style="min-width: 130px; margin-bottom: 0;">S3 Bucket:</label>
+				<label for="bucketName" style="min-width: 180px; margin-bottom: 0;">S3 Bucket:</label>
 				<input
-					type="text" class="form-control" name="bucketName" th:value="${bucketName}"
+					type="text" class="form-control fieldWidth fieldMargin"
+					name="bucketName"
+					th:value="${bucketName}"
 					id="bucketName" placeholder="Enter S3 Bucket Name" style="margin-left: 10px; width:600px;" />
 			</div>
 			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="s3Path" style="min-width: 130px; margin-bottom: 0;">Endpoint Path:</label>
+				<label for="s3Path" style="min-width: 180px; margin-bottom: 0;">Endpoint Path:</label>
 				<input
 					type="text" class="form-control fieldWidth fieldMargin"
 					th:value="${s3Path}"
@@ -116,7 +117,7 @@
 					placeholder="Enter S3 Endpoint Path" style="margin-left: 10px;" />
 			</div>
 			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="accessKey" style="min-width: 130px; margin-bottom: 0;">Access Key:</label>
+				<label for="accessKey" style="min-width: 180px; margin-bottom: 0;">Access Key:</label>
 				<input
 					type="text" class="form-control fieldWidth fieldMargin"
 					th:value="${accessKey}"
@@ -124,15 +125,15 @@
 					placeholder="Enter Access Key" style="margin-left: 10px; width:600px;"  />
 			</div>
 			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="secretKey" style="min-width: 130px; margin-bottom: 0;">Secret Access Key:</label>
+				<label for="secretKey" style="min-width: 180px; margin-bottom: 0;">Secret Access Key:</label>
 				<input
 					type="password" autocomplete="secret-access-key" class="form-control fieldWidth fieldMargin"
 					th:value="${secretKey}"
 					name="secretKey" id="secretKey"
 					placeholder="Enter Secret Access Key" style="margin-left: 10px;" />
 			</div>
-			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center;">
-				<label for="region" style="min-width: 130px; margin-bottom: 0;">Region:</label>
+			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+				<label for="region" style="min-width: 180px; margin-bottom: 0;">Region:</label>
 				<input
 					type="text" class="form-control fieldWidth"
 					th:value="${region}"
@@ -146,7 +147,7 @@
 	<div th:if="${authorized != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
 	<br/>
 	<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-	    <label for="drivePath" style="min-width: 130px; margin-bottom: 0;">Endpoint Path:</label>
+	    <label for="drivePath" style="min-width: 180px; margin-bottom: 0;">Endpoint Path:</label>
 	    <input
 	        type="text" class="form-control"
 	        th:value="${drivePath}"
@@ -163,16 +164,15 @@
 	<div th:if="${authorizedGC != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
 	<br/>
 	<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-		<label for="googleCloudBucketName" style="min-width: 130px; margin-bottom: 0;">Google Cloud Bucket:</label>
+		<label for="googleCloudBucketName" style="min-width: 180px; margin-bottom: 0;">Google Cloud Bucket:</label>
 		<input
-			type="text" class="form-control fieldWidth"
+			type="text" class="form-control fieldWidth fieldMargin"
 			name="googleCloudBucketName" th:value="${googleCloudBucketName}"
 			id="googleCloudBucketName" placeholder="Enter Google Cloud Bucket Name"
 			style="margin-left: 10px; width:600px;" />
 	</div>
-	<br/>
-	<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center;">
-	    <label for="googleCloudPath" style="min-width: 130px; margin-bottom: 0;">Endpoint Path:</label>
+	<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+	    <label for="googleCloudPath" style="min-width: 180px; margin-bottom: 0;">Endpoint Path:</label>
 	    <input
 	        type="text" class="form-control fieldWidth"
 	        th:value="${googleCloudPath}"
@@ -188,8 +188,8 @@
 	<!-- The name of Box container is MyBox -->
 	<input type="hidden" name="boxContainerName" id="boxContainerName"
 		th:value="MyBox" />
-	<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center;">
-	    <label for="boxPath" style="min-width: 130px; margin-bottom: 0;">Endpoint Path:</label>
+	<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+	    <label for="boxPath" style="min-width: 180px; margin-bottom: 0;">Endpoint Path:</label>
 	    <input
 	        type="text" class="form-control fieldWidth"
 	        th:value="${boxPath}"
@@ -202,7 +202,7 @@
 <th:block th:fragment="asperaBlock">
 	<div id="asperaDiv" style="display: none;">
 		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaBucketName" style="min-width: 220px; margin-bottom: 0;">Aspera Destination Directory:</label>
+			<label for="asperaBucketName" style="min-width: 180px; margin-bottom: 0;">Aspera Destination Directory:</label>
 			<div style="flex: 1;">
 				<select name="asperaBucketName" id="asperaBucketName" class="form-control fieldWidth fieldMargin"
 					th:if="${asperaBucketName == 'test'}"
@@ -218,31 +218,25 @@
 			</div>
 		</div>
 		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaUser" style="min-width: 220px; margin-bottom: 0;">Aspera Account User:</label>
+			<label for="asperaUser" style="min-width: 180px; margin-bottom: 0;">Aspera Account User:</label>
 			<input
 				type="text" class="form-control fieldWidth fieldMargin"
 				th:value="${asperaUser}"
 				name="asperaUser" id="asperaUser"
 				placeholder="Enter User" style="margin-left: 10px;" />
 		</div>
+		<input type="hidden" name="asperaPath" id="asperaPath"
+				th:value="${asperaPath}" />
 		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaPath" style="min-width: 220px; margin-bottom: 0;">Destination Location:</label>
-			<input
-				type="text" class="form-control fieldWidth fieldMargin"
-				th:value="${asperaPath}"
-				name="asperaPath" id="asperaPath"
-				placeholder="Enter Destination Location" style="margin-left: 10px;" />
-		</div>
-		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaPassword" style="min-width: 220px; margin-bottom: 0;">Aspera Account Password:</label>
+			<label for="asperaPassword" style="min-width: 180px; margin-bottom: 0;">Aspera Account Password:</label>
 			<input
 				type="password" autocomplete="secret-access-key" class="form-control fieldWidth  fieldMargin"
 				th:value="${asperaPassword}"
 				name="asperaPassword" id="asperaPassword"
 				placeholder="Enter Aspera Password" style="margin-left: 10px;" />
 		</div>
-		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center;">
-			<label for="asperaHost" style="min-width: 220px; margin-bottom: 0;">Aspera Host:</label>
+		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
+			<label for="asperaHost" style="min-width: 180px; margin-bottom: 0;">Aspera Host:</label>
 			<input
 				type="text" class="form-control fieldWidth"
 				th:value="${asperaHost}"
